--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
                     <h2 class="section-title">About Me</h2>
                     <div class="about-content">
                         <div class="profile-img">
-                            <img src="img/profile-img.jpg" alt = "Profile Image" /></div>
+                            <img src="img/profile-img.JPG" alt = "Profile Image" /></div>
                         <div class="about-text">
                             <p>Hi! I'm Prince, currently pursuing an MSc in Computer Science at the University of East London, specializing in data science, machine learning, and big data analytics. Throughout my studies, I have gained practical experience through academic projects and continuous self-learning in Python, data analysis, and AI. I am particularly passionate about turning raw data into actionable insights and developing data-driven solutions that can make a real impact.</p>
                             <p>I'm actively seeking placement opportunities starting April 2026, where I can apply my skills in a professional environment, collaborate with innovative teams, and contribute to meaningful projects. My interests include predictive analytics, machine learning applications, and data visualization, and I enjoy exploring ways to solve complex problems through data. Outside of academics, I participate in Kaggle competitions, contribute to open-source projects, and keep up with the latest trends in AI and machine learning.</p>
@@ -1669,5 +1669,6 @@
 </body>
 
 </html>
+
 
 
